--- a/css/styles.css
+++ b/css/styles.css
@@ -213,7 +213,7 @@ body {
   margin-bottom: 30px;
   border-radius: 4px;
 }
-.benefits-title {
+.visually-hidden {
   position: absolute;
   white-space: nowrap;
   width: 1px;
@@ -386,6 +386,11 @@ footer {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+.footer-row {
+  display: flex;
+  align-items: baseline;
+  gap: 93px;
+}
 .footer-logo {
   display: block;
   margin-bottom: 20px;
@@ -461,7 +466,7 @@ address {
 .footer-socials-link:focus {
   background-color: var(--color-link);
 }
-.socials-title {
+.footer-block-title {
   font-weight: 700;
   font-size: 14px;
   text-transform: uppercase;
@@ -469,6 +474,65 @@ address {
   letter-spacing: 0.03em;
   color: #ffffff;
   margin-bottom: 20px;
+}
+.subscription {
+  display: flex;
+  align-items: flex-end;
+  gap: 12px;
+}
+.subscription-block {
+  display: flex;
+  flex-direction: column;
+}
+.subscription-input {
+  padding-left: 16px;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  padding-right: 0;
+  border: solid 1px;
+  border-radius: 4px;
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #2f303a;
+  width: 340px;
+}
+.subscription-input::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.subscription-button {
+  display: flex;
+  font-family: inherit;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin: 0;
+  padding: 0;
+  background-color: var(--color-link);
+  cursor: pointer;
+  border: 0;
+  border-radius: 4px;
+  width: 200px;
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  transition-property: background-color;
+  transition-duration: var(--time-change);
+  transition-timing-function: var(--cubic-bezier);
+}
+.subscription-button:hover {
+  background-color: #188ce8;
+}
+.subscription-button:active {
+  background-color: #188ce8;
+}
+
+.subscription-icon {
+  fill: #ffffff;
 }
 .backdrop {
   position: fixed;
@@ -492,12 +556,13 @@ address {
   transform: translate(-50%, -50%);
   width: 528px;
   height: 581px;
+  padding: 40px;
   background-color: #ffffff;
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-.modal-btn {
+.modal-button-close {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -511,9 +576,151 @@ address {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
+  transition: fill var(--time-change);
+  transition-timing-function: fill var(--cubic-bezier);
+}
+.modal-button-close:hover {
+  fill: var(--color-link);
+}
+.modal-button-close:focus {
+  fill: var(--color-link);
+}
+.modal-title {
+  display: block;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  text-align: center;
+  padding-bottom: 12px;
+}
+.modal-label {
+  display: block;
+  padding-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--color-text);
+}
+.modal-elements {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+.modal-input {
+  padding: 0;
+  padding-left: 42px;
+  height: 40px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  cursor: pointer;
+  outline: 1px solid transparent;
+  outline-offset: -1px;
+  transition: outline var(--time-change);
+  transition-timing-function: outline var(--cubic-bezier);
+}
+.modal-input:focus {
+  outline-color: #2196f3;
 }
 .modal-icon {
+  position: absolute;
+  top: 11px;
+  left: 12px;
+  display: inline-block;
   fill: #000000;
+  transition: fill var(--time-change);
+  transition-timing-function: fill var(--cubic-bezier);
+}
+.modal-input:focus + .modal-icon {
+  fill: var(--color-link);
+}
+.modal-textarea {
+  border-radius: 4px;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  resize: none;
+  cursor: pointer;
+  outline: 1px solid transparent;
+  outline-offset: -1px;
+  transition: outline var(--time-change);
+  transition-timing-function: outline var(--cubic-bezier);
+}
+.modal-textarea:focus {
+  outline-color: #2196f3;
+}
+.modal-textarea::placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.modal-group {
+  margin-bottom: 20px;
+}
+.modal-checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8.38px;
+  margin-bottom: 30px;
+}
+.modal-checkbox-input {
+  appearance: none;
+  width: 16px;
+  height: 15px;
+  outline: 2px solid transparent;
+  outline-offset: -2px;
+  border: 2px solid #212121;
+  border-radius: 2px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 0;
+  background-image: url("data:image/svg+xml,%3Csvg width='13' height='10' viewBox='0 0 13 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.95703 4.75166L1.88825 4.68604L1.81923 4.75141L0.93123 5.59258L0.854858 5.66492L0.930974 5.73753L4.42671 9.07236L4.49574 9.1382L4.56476 9.07236L12.069 1.91352L12.1449 1.84116L12.069 1.76881L11.1873 0.927644L11.1183 0.861826L11.0493 0.927611L4.49577 7.17353L1.95703 4.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/svg%3E");
+  transition: background-size var(--time-change),
+    outline-color var(--time-change), background-color var(--time-change);
+  transition-timing-function: var(--cubic-bezier),
+    outline-color var(--cubic-bezier), background-color var(--cubic-bezier);
+}
+.modal-checkbox-input:checked {
+  outline-color: var(--color-link);
+  background-color: var(--color-link);
+
+  background-size: 11px 8px;
+}
+.modal-checkbox-label {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--color-text);
+}
+.modal-button {
+  display: flex;
+  font-family: inherit;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  padding: 0;
+  background-color: var(--color-link);
+  cursor: pointer;
+  border: 0;
+  border-radius: 4px;
+  width: 200px;
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  transition-property: background-color;
+  transition-duration: var(--time-change);
+  transition-timing-function: var(--cubic-bezier);
+}
+.modal-button:hover {
+  background-color: #188ce8;
+}
+.modal-button:active {
+  background-color: #188ce8;
 }
 .portfolio-button {
   display: flex;
